--- a/acknowledgements.tex
+++ b/acknowledgements.tex
@@ -1,11 +1,7 @@
 \section*{\centering{Acknowledgments}}
 
-Gary Kalmanovich,
+I'd like to thank my thesis sponsor Dr. Gary Kalmanovich, for his advice and giving me the freedom to explore this passion project. I'd also like to thank Dr. David Gillman for his advice and editing help. And special thanks to Nikolas "Waka Flocka" Wojtalewicz for his mathematical expertise.
 
-David Gillman,
-
-Nikolas Wojtalewicz,
-
-
+Lastly, thanks to New College of Florida for providing the funding and environment to make this thesis possible.
 
 \addcontentsline{toc}{section}{Acknowledgments}
