--- a/main.tex
+++ b/main.tex
@@ -26,6 +26,13 @@
 \usepackage{lgrind}
 \usepackage[fleqn]{mathtools}
 \usepackage{amsmath}
+\usepackage{amssymb} % for math symbols such as \therefore
+\usepackage{amsthm}
+\newtheorem{theorem}{Theorem}[section]
+%\newtheorem{corollary}{Corollary}[theorem]
+\newtheorem{lemma}[theorem]{Lemma}
+\newtheorem{remark}{Remark}
+
 \usepackage{algorithm}
 \usepackage{algpseudocode}
 \usepackage{graphicx} % package to manage images
