--- a/introduction.tex
+++ b/introduction.tex
@@ -1,4 +1,4 @@
-\chapter{Introduction}
+\chapter*{Introduction}
 
 %Goal
 This rover 
@@ -32,3 +32,5 @@ Chapter 4 continues the description of physical connections with respect to the 
 Chapter 5 gives a brief overview of the Robot Operating System (ROS), and how it's used in this project. It then meanders through every software process used, and how they communicate through ROS.
 
 Chapter 6 describes the results of an experimental test conducted with the rover. Limitations of and extensions to the current design are also mentioned.
+
+\addcontentsline{toc}{chapter}{Introduction}
